static/styles/menu.css
/* ------------------- Fonts ------------------- */
@font-face {
  font-family: "Circular-Black";
  src: url("../fonts/CircularStd-Black.otf") format("opentype");
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: "Circular-BlackItalic";
  src: url("../fonts/CircularStd-BlackItalic.otf") format("opentype");
  font-weight: 900;
  font-style: italic;
}

@font-face {
  font-family: "Circular-Bold";
  src: url("../fonts/CircularStd-Bold.otf") format("opentype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Circular-BoldItalic";
  src: url("../fonts/CircularStd-BoldItalic.otf") format("opentype");
  font-weight: 700;
  font-style: italic;
}

@font-face {
  font-family: "Circular-Book";
  src: url("../fonts/CircularStd-Book.otf") format("opentype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Circular-BookItalic";
  src: url("../fonts/CircularStd-BookItalic.otf") format("opentype");
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: "Circular-Light";
  src: url("../fonts/CircularStd-Light.otf") format("opentype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Circular-LightItalic";
  src: url("../fonts/CircularStd-Light Italic.otf") format("opentype");
  font-weight: 300;
  font-style: italic;
}

@font-face {
  font-family: "Circular-Medium";
  src: url("../fonts/CircularStd-Medium.otf") format("opentype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Circular-MediumItalic";
  src: url("../fonts/CircularStd-MediumItalic.otf") format("opentype");
  font-weight: 500;
  font-style: italic;
}


* {
  margin: 0;
  box-sizing: border-box;
}

/* ------------------- GRID SYSTEM ------------------- */
body {
  display: grid;
  grid-template-columns: repeat(18, 1fr);
  width: 100vw;
  /* overflow-x: hidden; */
  background-color: #ffffff;
  overflow-x: hidden;
}

section {
  grid-column: 1 / -1;
}

/* ------------------- Header ------------------- */
.header {
  grid-column: 1 / -1;
  display: flex;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
  gap: 2vw;
  height: 8vh;

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  transition: all 0.5s ease;
  z-index: 100;
}

.header:hover {
  background-color: white;
}

/* --- навигация --- */
.nav {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: relative;
}

/* --- список без маркеров --- */
.nav-list {
  display: flex;
  gap: 2vw;
  list-style: none;
  margin: 0;
  padding: 0;
}

/* --- ссылки --- */
.nav-list a {
  color: white;
  font-size: 2rem;
  font-family: "Circular-Light";
  font-weight: 100;
  text-decoration: none;
  transition: all 0.5s ease;
}

.header:hover .nav-list a {
  color: black;
}

/* --- язык справа --- */
.language-change {
  position: absolute;
  right: 2vw;
  top: 0.5vh;
  font-size: 2rem;
  color: white;
  font-family: "Circular-Light";
  font-weight: 100;
  text-decoration: none;
  transition: all 0.5s ease;
}

.header:hover .language-change {
  color: black;
}


/* ------------------- Hero ------------------- */
.hero-section {
  grid-column: 1 / -1;
  height: 100vh;
  width: 100%;
  background-image: url("../images/f68e70c872fdc53439e4f0fb2a0eb47bc512f60a.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  display: grid;
  grid-template-columns: repeat(18, 1fr);
  align-items: center;
  justify-items: center;
}

.hero-title {
  grid-column: 1 / -1; /* По центру, на всю ширину */
  color: white;
  font-size: 5rem;
  font-family: "Circular-Book";
  font-style: italic;
  font-weight: 100;
  text-align: center;
}


/* ------------------- Main Dishes ------------------- */
.main-dishes {
  grid-column: 1 / -1;
  height: fit-content;
  background-color: #00657C;

  display: grid;
  grid-template-columns: repeat(18, 1fr);
  justify-content: center;
  align-content: start;
}

.main-dishes .menu-title {
  grid-column: 2 / 18;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 3vw;
  padding-top: 1rem;
}

.main-dishes .menu-title h2 {
  color: white;
  font-size: 3vw;
  font-family: "Circular-Book";
  font-style: italic;
  font-weight: 500;
}

.main-dishes .menu-title .horizontal-line {
  width: 100%;
  height: 1px;
  background-color: white;
}

/* ------------------- Dishes Layout ------------------- */
.menu-box {
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: repeat(18, 1fr);
  grid-template-rows: repeat(2, 1fr);
  justify-content: center;
  align-content: start;
  gap: 1vh;
}

.food-menu-box {
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: repeat(18, 1fr);
  justify-content: center;
  align-content: start;
  gap: 1vh;
}

.dish-title {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
}

.dish-title .vertical-line {
  width: 1px;
  height: 3rem;
  background-color: white;
}

.dish-title h3 {
  color: white;
  font-size: 2vw;
  font-family: "Circular-Light";
  font-style: italic;
  font-weight: 200;
}

/* ------------------- Pain Box ------------------- */
.pain-box {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-top: 3vh;
  max-width: 100%;
}

#pain-dish-box {
  grid-column: 2/11;
}

#salad-dish-box {
  grid-column: 12/18;
}

.pain-box img {
  object-fit: cover;
  max-width: 35vw;
  padding: 0;
}

.dish-name-box {
  background-color: #EDE5BB;
  width: fit-content;
  height: fit-content;
  padding-inline: 1vw;
}

.pain-box .dish-name-box {
  padding-left: 4vw;
  padding-right: 2vw;
  padding-block: 1vw;
  margin-left: -2vw;
}

.dish-name-box h3 {
  font-family: "Circular-Light";
  color: #074C5C;
  line-height: 2vw;
  font-weight: 100;
  font-size: 1vw;
}
/* ... */

